# malus

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md
bench/: nanogpt_pytorch.py  nanogpt_step.sh
crates/malus-cli/: Cargo.toml
crates/malus-cli/src/: lint.rs  main.rs  tests.rs
crates/malus-codegen-cpu/: Cargo.toml
crates/malus-codegen-cpu/src/: lib.rs  tests.rs
crates/malus-codegen-cpu/tests/: metal_integration.rs
crates/malus-codegen-gpu/: Cargo.toml
crates/malus-loader/: Cargo.toml
crates/malus-runtime/: Cargo.toml
crates/malus-runtime/src/: bench.rs  buffer.rs  lib.rs  metal.rs  strio.rs  tape.rs  tests.rs
crates/malus-sema/: Cargo.toml
crates/malus-stdlib/: Cargo.toml
crates/malus-syntax/: Cargo.toml
docs/adr/: 0001-dual-pipeline-compilation.md  0002-ctmm.md  0002-lobster-memory-model.md  0003-explicit-placement-implicit-transfer.md  0004-braces-not-indentation.md  0005-mps-for-stdlib-msl-for-user-kernels.md  0006-panic-only-error-model.md  0007-tensor-binop-in-fn-bodies.md  0008-function-pointer-injection-for-runtime-symbols.md  0009-ctmm-gpu-pending-barriers.md  0010-builtin-kernel-id-allocation.md  0011-ctmm-reassignment-lowering.md  0012-eager-cpu-loops-for-stdlib-matmul-transpose-sum.md  0013-tensor-shapes-runtime-only.md  0014-ctmm-hierarchical-analysis.md  0015-define-by-run-tape.md  0016-variable-type-directed-rc.md  0017-mps-migration.md  0018-file-io-surface.md  0019-sema-reject-aggregate-payload-escape.md  0020-tuple-memory-model.md  0021-tensor-release-tape-hook.md  0022-api-surface-tracks-pytorch-contracts.md  0023-reshape-zero-copy-aliasing.md  0024-cpu-philox-randn.md  0025-interior-mutation-mut-params.md  0026-v4-lobster-borrow-inference.md  0027-kernel-language-v2.md  0028-vendor-primitives-rule.md  0029-composed-attention.md  0030-single-tensor-type-grad-inference.md  0031-demo-gated-ci-asserts.md  0032-backward-kernels-via-host-fns.md  0033-metal-context-single-consumer.md  0034-generic-optimizer-list-write-back.md  0035-execution-model-ladder.md  0036-module-composition-optimizer-recursion.md  0037-bf16-autocast.md  0038-benchmark-methodology.md  0039-buffer-pool-generation-gated-reuse.md  (+1 more)
docs/milestones/: README.md  cross-module-types.md  ctmm-v1-gaps.md  lobster-v1-gaps.md  m1-syntax.md  m10-structs-enums.md  m11-mlp.md  m12-hardening.md  m13-variable-type.md  m14-tape-backward.md  m15-differentiable-stdlib.md  m16-broadcasting-axis-reductions.md  m17-shapes-batched-matmul.md  m18-transformer-stdlib.md  m19-embeddings-index-tensors.md  m2-semantics.md  m20-lvalue-assignment-adamw.md  m21-mps-migration.md  m22-data-io-nanogpt.md  m23-de-risk-spike.md  m24-kernel-language-v2.md  m25-stdlib-forward-kernels.md  m26-backward-kernels.md  m27-kill-variable.md  m28-module-trait.md  m29-benchmark-results.md  m29-borrow-inference.md  m3-cpu-codegen.md  m30-honest-timing.md  m31-async-dispatch.md  m32-buffer-pooling.md  m33-nd-permute-multihead.md  m34-named-submodules.md  m35-capstone-benchmark.md  m4-metal-runtime.md  (+14 more)
examples/: adamw.ml  add_tensors.ml  arrays.ml  batched_matmul.ml  broadcasting.ml  control_flow.ml  embedding.ml  fib.ml  gradient_check.ml  hardening.ml  mlp_autograd.ml  mlp_forward.ml  nanogpt.ml  nanogpt_modular.ml  nested_tensor.ml  payload_escape.ml  relu_backward.ml  scalar_ops.ml  showcase.ml  structs_enums.ml  transformer_block.ml  tuples.ml  variable_rc.ml  xor.ml
(+57 files in other folders)
