[package]
name = "malus-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "malus"
path = "src/main.rs"

[dependencies]
malus-syntax = { path = "../malus-syntax" }
malus-loader = { path = "../malus-loader" }
malus-sema = { path = "../malus-sema" }
malus-codegen-cpu = { path = "../malus-codegen-cpu" }
malus-codegen-gpu = { path = "../malus-codegen-gpu" }
malus-runtime = { path = "../malus-runtime" }
